# hminc

./: .gitignore  LICENSE  README.md  build_in_sandbox.sh  hminc.cabal
Data/: Minc.hs
Data/Minc/: Boxed.hs  Raw.hs  Relt.hs  Types.hs  Utils.hs
Data/Minc/Raw/: Base.chs  Raw.hs
examples/: example1.hs
